[tool.poetry]
name = "hm_client"
version = "0.1.0"
description = ""
authors = ["Tim Sweeney"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
flask = "^1.1"
dataset = "^1.1.2"

[tool.poetry.dev-dependencies]
black = {version = "^18.3-alpha.0", allow-prereleases = true}
mypy = {version = "^0.750.0", allow-prereleases = true}
flake8 = {version = "^3.7", allow-prereleases = true}

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
